--- a/UnityProject/Packages/manifest.json
+++ b/UnityProject/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.interaction.toolkit": "0.10.0-preview.7",
     "com.unity.xr.management": "4.2.0",
+    "com.unity.xr.openvr.standalone": "2.0.5",
     "com.unity.xr.windowsmr": "2.9.1",
     "com.valvesoftware.unity.openvr": "file:../Assets/SteamVR/OpenVRUnityXRPackage/Editor/com.valvesoftware.unity.openvr-1.1.4.tgz",
     "com.unity.modules.ai": "1.0.0",
